crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_aura_moonfire.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: aura
---
{
  "spellId": 8921,
  "baseDurationMs": 0,
  "maxDurationMs": 0,
  "maxStacks": 1,
  "periodicType": null,
  "tickPeriodMs": 0,
  "refreshBehavior": "duration",
  "durationHasted": false,
  "hastedTicks": false,
  "pandemicRefresh": false,
  "rollingPeriodic": false,
  "tickMayCrit": false,
  "tickOnApplication": false
}
