crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_item_worn_shortsword.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: item
---
{
  "id": 25,
  "name": "Worn Shortsword",
  "description": "",
  "fileName": "inv_sword_04",
  "itemLevel": 1,
  "quality": 1,
  "requiredLevel": 1,
  "binding": 2,
  "buyPrice": 18,
  "sellPrice": 3,
  "maxCount": 0,
  "stackable": 1,
  "speed": 2600,
  "classId": 2,
  "subclassId": 7,
  "inventoryType": 21,
  "classification": {
    "classId": 2,
    "className": "Weapon",
    "subclassId": 7,
    "subclassName": "Sword",
    "inventoryType": 21,
    "inventoryTypeName": "Main Hand",
    "expansionId": 0,
    "expansionName": "Classic"
  },
  "stats": [],
  "effects": [],
  "sockets": [],
  "socketBonusEnchantId": 0,
  "flags": [
    0,
    8192,
    8388608,
    0,
    0
  ],
  "allowableClass": -1,
  "allowableRace": -1,
  "expansionId": 0,
  "itemSetId": 0,
  "setInfo": null,
  "dropSources": [],
  "dmgVariance": 0.5,
  "gemProperties": 0,
  "modifiedCraftingReagentItemId": 0
}
