crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_spell_fireball.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: spell
---
{
  "id": 133,
  "name": "Fireball",
  "description": "Throws a fiery ball that causes $s1 Fire damage.$?a157642[\r\n\r\nEach time your Fireball fails to critically strike a target, it gains a stacking $157644s1% increased critical strike chance. Effect ends when Fireball critically strikes.][]",
  "auraDescription": "",
  "descriptionVariables": "",
  "fileName": "spell_fire_flamebolt",
  "isPassive": false,
  "knowledgeSource": {
    "source": "unknown"
  },
  "castTime": 2250,
  "recoveryTime": 0,
  "startRecoveryTime": 1500,
  "manaCost": 0,
  "powerCost": 0,
  "powerCostPct": 1.0,
  "powerType": 0,
  "chargeRecoveryTime": 0,
  "maxCharges": 0,
  "rangeMax0": 40.0,
  "rangeMax1": 40.0,
  "rangeMin0": 0.0,
  "rangeMin1": 0.0,
  "coneDegrees": 0.0,
  "radiusMax": 0.0,
  "radiusMin": 0.0,
  "defenseType": 1,
  "schoolMask": 4,
  "bonusCoefficientFromAp": 0.0,
  "effectBonusCoefficient": 4.5,
  "interruptAura0": 0,
  "interruptAura1": 0,
  "interruptChannel0": 0,
  "interruptChannel1": 0,
  "interruptFlags": 15,
  "duration": 0,
  "maxDuration": 0,
  "canEmpower": false,
  "empowerStages": [],
  "dispelType": 0,
  "facingCasterFlags": 0,
  "speed": 45.0,
  "spellClassMask1": 9,
  "spellClassMask2": 0,
  "spellClassMask3": 8,
  "spellClassMask4": 0,
  "spellClassSet": 3,
  "baseLevel": 10,
  "maxLevel": 0,
  "maxPassiveAuraLevel": 0,
  "spellLevel": 10,
  "casterAuraSpell": 0,
  "casterAuraState": 0,
  "excludeCasterAuraSpell": 0,
  "excludeCasterAuraState": 0,
  "excludeTargetAuraSpell": 0,
  "excludeTargetAuraState": 0,
  "targetAuraSpell": 0,
  "targetAuraState": 0,
  "replacementSpellId": 431044,
  "shapeshiftExclude0": 0,
  "shapeshiftExclude1": 0,
  "shapeshiftMask0": 0,
  "shapeshiftMask1": 0,
  "stanceBarOrder": 0,
  "requiredTotemCategory0": 0,
  "requiredTotemCategory1": 0,
  "totem0": 0,
  "totem1": 0,
  "attributes": [
    65536,
    0,
    0,
    0,
    0,
    0,
    256,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0
  ],
  "effectTriggerSpell": [],
  "implicitTarget": [
    6
  ],
  "learnSpells": []
}
