crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_spell_frostbolt.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: spell
---
{
  "id": 116,
  "name": "Frostbolt",
  "description": "Launches a bolt of frost at the enemy, causing $228597s1 Frost damage and slowing movement speed by $205708s1% for $205708d.$?a1246769[\r\n\r\n|CFFffffffApplies $1246769s1 $lstack:stacks; of Freezing.|R][]",
  "auraDescription": "",
  "descriptionVariables": "",
  "fileName": "spell_frost_frostbolt02",
  "isPassive": false,
  "knowledgeSource": {
    "source": "unknown"
  },
  "castTime": 2000,
  "recoveryTime": 0,
  "startRecoveryTime": 1500,
  "manaCost": 0,
  "powerCost": 0,
  "powerCostPct": 2.0,
  "powerType": 0,
  "chargeRecoveryTime": 0,
  "maxCharges": 0,
  "rangeMax0": 40.0,
  "rangeMax1": 40.0,
  "rangeMin0": 0.0,
  "rangeMin1": 0.0,
  "coneDegrees": 0.0,
  "radiusMax": 0.0,
  "radiusMin": 0.0,
  "defenseType": 1,
  "schoolMask": 16,
  "bonusCoefficientFromAp": 0.0,
  "effectBonusCoefficient": 0.0,
  "interruptAura0": 0,
  "interruptAura1": 0,
  "interruptChannel0": 0,
  "interruptChannel1": 0,
  "interruptFlags": 15,
  "duration": 0,
  "maxDuration": 0,
  "canEmpower": false,
  "empowerStages": [],
  "dispelType": 1,
  "facingCasterFlags": 0,
  "speed": 35.0,
  "spellClassMask1": 32,
  "spellClassMask2": 33554432,
  "spellClassMask3": 0,
  "spellClassMask4": 0,
  "spellClassSet": 3,
  "baseLevel": 1,
  "maxLevel": 0,
  "maxPassiveAuraLevel": 0,
  "spellLevel": 1,
  "casterAuraSpell": 0,
  "casterAuraState": 0,
  "excludeCasterAuraSpell": 0,
  "excludeCasterAuraState": 0,
  "excludeTargetAuraSpell": 0,
  "excludeTargetAuraState": 0,
  "targetAuraSpell": 0,
  "targetAuraState": 0,
  "replacementSpellId": 0,
  "shapeshiftExclude0": 0,
  "shapeshiftExclude1": 0,
  "shapeshiftMask0": 0,
  "shapeshiftMask1": 0,
  "stanceBarOrder": 0,
  "requiredTotemCategory0": 0,
  "requiredTotemCategory1": 0,
  "totem0": 0,
  "totem1": 0,
  "attributes": [
    65536,
    0,
    0,
    128,
    0,
    0,
    2097408,
    0,
    4096,
    0,
    0,
    2,
    0,
    1,
    0,
    0
  ],
  "effectTriggerSpell": [
    228597
  ],
  "implicitTarget": [
    6
  ],
  "learnSpells": []
}
