crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_spell_kill_shot.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: spell
---
{
  "id": 53351,
  "name": "Kill Shot",
  "description": "You attempt to finish off a wounded target, dealing $s1 Physical damage. Only usable on enemies with less than $s2% health.",
  "auraDescription": "",
  "descriptionVariables": "",
  "fileName": "ability_hunter_assassinate2",
  "isPassive": false,
  "knowledgeSource": {
    "source": "unknown"
  },
  "castTime": 0,
  "recoveryTime": 0,
  "startRecoveryTime": 1500,
  "manaCost": 0,
  "powerCost": 10,
  "powerCostPct": 0.0,
  "powerType": 2,
  "chargeRecoveryTime": 10000,
  "maxCharges": 1,
  "rangeMax0": 40.0,
  "rangeMax1": 40.0,
  "rangeMin0": 0.0,
  "rangeMin1": 0.0,
  "coneDegrees": 0.0,
  "radiusMax": 0.0,
  "radiusMin": 0.0,
  "defenseType": 3,
  "schoolMask": 1,
  "bonusCoefficientFromAp": 3.20000004768,
  "effectBonusCoefficient": 0.0,
  "interruptAura0": 0,
  "interruptAura1": 0,
  "interruptChannel0": 0,
  "interruptChannel1": 0,
  "interruptFlags": 4,
  "duration": 0,
  "maxDuration": 0,
  "canEmpower": false,
  "empowerStages": [],
  "dispelType": 0,
  "facingCasterFlags": 0,
  "speed": 80.0,
  "spellClassMask1": 2050,
  "spellClassMask2": 0,
  "spellClassMask3": 0,
  "spellClassMask4": 33555456,
  "spellClassSet": 9,
  "baseLevel": 42,
  "maxLevel": 0,
  "maxPassiveAuraLevel": 0,
  "spellLevel": 42,
  "casterAuraSpell": 0,
  "casterAuraState": 0,
  "excludeCasterAuraSpell": 0,
  "excludeCasterAuraState": 0,
  "excludeTargetAuraSpell": 0,
  "excludeTargetAuraState": 0,
  "targetAuraSpell": 0,
  "targetAuraState": 2,
  "replacementSpellId": 0,
  "shapeshiftExclude0": 0,
  "shapeshiftExclude1": 0,
  "shapeshiftMask0": 0,
  "shapeshiftMask1": 0,
  "stanceBarOrder": 0,
  "requiredTotemCategory0": 0,
  "requiredTotemCategory1": 0,
  "totem0": 0,
  "totem1": 0,
  "attributes": [
    65554,
    512,
    131072,
    0,
    512,
    0,
    268435712,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0
  ],
  "effectTriggerSpell": [],
  "implicitTarget": [
    6
  ],
  "learnSpells": []
}
