crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_spell_moonfire.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: spell
---
{
  "id": 8921,
  "name": "Moonfire",
  "description": "A quick beam of lunar light burns the enemy for $164812s1 Arcane damage and then an additional $164812o2 Arcane damage over $164812d$?s238049[, and causes enemies to deal $238049s1% less damage to you.][.]$?a372567[\r\n\r\nHits a second target within $279620s1 yds of the first.][]$?s197911[\r\n\r\n|cFFFFFFFFGenerates ${$m3/10} Astral Power.|r][] ",
  "auraDescription": "",
  "descriptionVariables": "",
  "fileName": "spell_nature_starfall",
  "isPassive": false,
  "knowledgeSource": {
    "source": "unknown"
  },
  "castTime": 0,
  "recoveryTime": 0,
  "startRecoveryTime": 1500,
  "manaCost": 0,
  "powerCost": 0,
  "powerCostPct": 1.20000004768,
  "powerType": 0,
  "chargeRecoveryTime": 0,
  "maxCharges": 0,
  "rangeMax0": 40.0,
  "rangeMax1": 40.0,
  "rangeMin0": 0.0,
  "rangeMin1": 0.0,
  "coneDegrees": 0.0,
  "radiusMax": 0.0,
  "radiusMin": 0.0,
  "defenseType": 1,
  "schoolMask": 64,
  "bonusCoefficientFromAp": 0.0,
  "effectBonusCoefficient": 0.0,
  "interruptAura0": 0,
  "interruptAura1": 0,
  "interruptChannel0": 0,
  "interruptChannel1": 0,
  "interruptFlags": 0,
  "duration": 0,
  "maxDuration": 0,
  "canEmpower": false,
  "empowerStages": [],
  "dispelType": 1,
  "facingCasterFlags": 0,
  "speed": 0.0,
  "spellClassMask1": 2097152,
  "spellClassMask2": 0,
  "spellClassMask3": 0,
  "spellClassMask4": 0,
  "spellClassSet": 7,
  "baseLevel": 2,
  "maxLevel": 0,
  "maxPassiveAuraLevel": 0,
  "spellLevel": 2,
  "casterAuraSpell": 0,
  "casterAuraState": 0,
  "excludeCasterAuraSpell": 0,
  "excludeCasterAuraState": 0,
  "excludeTargetAuraSpell": 0,
  "excludeTargetAuraState": 0,
  "targetAuraSpell": 0,
  "targetAuraState": 0,
  "replacementSpellId": 0,
  "shapeshiftExclude0": 0,
  "shapeshiftExclude1": 0,
  "shapeshiftMask0": 1073741826,
  "shapeshiftMask1": 4,
  "stanceBarOrder": 0,
  "requiredTotemCategory0": 0,
  "requiredTotemCategory1": 0,
  "totem0": 0,
  "totem1": 0,
  "attributes": [
    65536,
    0,
    524288,
    0,
    0,
    8192,
    0,
    0,
    4608,
    4194304,
    0,
    0,
    0,
    1,
    0,
    0
  ],
  "effectTriggerSpell": [],
  "implicitTarget": [
    6,
    1,
    1
  ],
  "learnSpells": []
}
