crates/snapshot-parser/tests/snapshots/snapshots_test__snapshot_spell_mortal_strike.snap
---
source: snapshot-parser/tests/snapshots_test.rs
expression: spell
---
{
  "id": 12294,
  "name": "Mortal Strike",
  "description": "A vicious strike that deals $s1 Physical damage and reduces the effectiveness of healing on the target by $115804s1% for $115804d.",
  "auraDescription": "",
  "descriptionVariables": "$mult=${($max(0,$min($pl-5,15))*8+207)/327}",
  "fileName": "ability_warrior_savageblow",
  "isPassive": false,
  "knowledgeSource": {
    "source": "unknown"
  },
  "castTime": 0,
  "recoveryTime": 6000,
  "startRecoveryTime": 1500,
  "manaCost": 0,
  "powerCost": 300,
  "powerCostPct": 0.0,
  "powerType": 1,
  "chargeRecoveryTime": 0,
  "maxCharges": 0,
  "rangeMax0": 5.0,
  "rangeMax1": 5.0,
  "rangeMin0": 0.0,
  "rangeMin1": 0.0,
  "coneDegrees": 0.0,
  "radiusMax": 0.0,
  "radiusMin": 0.0,
  "defenseType": 2,
  "schoolMask": 1,
  "bonusCoefficientFromAp": 5.80492019653,
  "effectBonusCoefficient": 0.0,
  "interruptAura0": 0,
  "interruptAura1": 0,
  "interruptChannel0": 0,
  "interruptChannel1": 0,
  "interruptFlags": 0,
  "duration": 0,
  "maxDuration": 0,
  "canEmpower": false,
  "empowerStages": [],
  "dispelType": 0,
  "facingCasterFlags": 0,
  "speed": 0.0,
  "spellClassMask1": 33817344,
  "spellClassMask2": 1048576,
  "spellClassMask3": 0,
  "spellClassMask4": 0,
  "spellClassSet": 4,
  "baseLevel": 0,
  "maxLevel": 0,
  "maxPassiveAuraLevel": 0,
  "spellLevel": 0,
  "casterAuraSpell": 0,
  "casterAuraState": 0,
  "excludeCasterAuraSpell": 0,
  "excludeCasterAuraState": 0,
  "excludeTargetAuraSpell": 0,
  "excludeTargetAuraState": 0,
  "targetAuraSpell": 0,
  "targetAuraState": 0,
  "replacementSpellId": 0,
  "shapeshiftExclude0": 0,
  "shapeshiftExclude1": 0,
  "shapeshiftMask0": 0,
  "shapeshiftMask1": 0,
  "stanceBarOrder": 0,
  "requiredTotemCategory0": 0,
  "requiredTotemCategory1": 0,
  "totem0": 0,
  "totem1": 0,
  "attributes": [
    327696,
    134218240,
    4096,
    1024,
    0,
    0,
    0,
    0,
    4096,
    0,
    -2147483648,
    0,
    0,
    1,
    0,
    0
  ],
  "effectTriggerSpell": [],
  "implicitTarget": [
    6
  ],
  "learnSpells": []
}
